<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="8dp">

    <TextView
        android:id="@+id/smart_config_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/dialog_smart_config_hint" />

    <EditText
        android:id="@+id/smart_config_ssid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_smart_config_ssid"
        android:imeOptions="actionNext"
        android:inputType="text|textNoSuggestions"
        android:maxLines="1" />

    <EditText
        android:id="@+id/smart_config_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/dialog_smart_config_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:maxLines="1" />

</LinearLayout>
